--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     </div>
   </template>
 
+  <script src="js/network.js"></script>
   <script src="js/data.js"></script>
   <script src="js/map.js"></script>
   <script src="js/card.js"></script>
