--- a/index.html
+++ b/index.html
@@ -250,6 +250,15 @@
     </div>
   </template>
 
+  <!-- <script src="js/network.js"></script>
+  <script src="js/filter.js"></script>
+  <script src="js/data.js"></script>
+  <script src="js/map.js"></script>
+  <script src="js/card.js"></script>
+  <script src="js/debounce.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/filter-form.js"></script>
+  <script src="js/form.js"></script> -->
   <script src="js/bundle.js"></script>
 </body>
 </html>
