--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <label class="ad-form__label">Фотография жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" accept=".png, .jpg, .jpeg" multiple>
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" accept=".png, .jpg, .jpeg">
               <label for="images" class="ad-form__drop-zone">Загрузить<br>фото...</label>
             </div>
             <div class="ad-form__photo"></div>
@@ -251,5 +251,6 @@
   </template>
 
   <script src="bundle.js"></script>
+  <script src="js/photo.js"></script>
 </body>
 </html>
